# Med-Waves

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  about.py  analyze_wave_distribution.py  pyproject.toml  ruff.toml
dashboard/: med_wav.py
docs/: Incremental_training.md
notebooks/: Shallow_UBnet.ipynb
scripts/: SNR_ANALYSIS_README.md  calculate_snr.py  check_training.sh  create_manual_experiment.py  create_metric_season_grids.py  evaluate_bunet.py  find_corrupt_files.py  fit_scalers.py  make_comet_grids.py  monitor_io.sh  monitor_training.sh  preprocessed_files.py  run_diff_corrector_evaluation.py  run_diff_corrector_plotter.py
scripts/helpers/: keep_selected_variables_comp.py  keep_selected_variables_comp2017.py  keep_selected_variables_comp2018.py  keep_selected_variables_comp2019.py  keep_selected_variables_comp2020.py  keep_selected_variables_comp2021.py  keep_selected_variables_comp2022.py  keep_selected_variables_comp2023.py  keep_selected_variables_with.py  keep_selected_variables_without.py  rename_vars.py
scripts/monitoring/: watch_progress.sh
scripts/trainers/: Polynomial_ModelPerPoint.py  Polynomial_modelPerPoint_Linear_neptune.py  Polynomial_modelPerPoint_Linear_onlyModels_neptune.py
src/classifiers/: bu_net.py  build_cluster_map.py  delta_corrector.py  edcdf_corrector.py  eqm_corrector.py  full_dataset_old.py  full_dataset_trainer.py  helpers.py  inceremental_trainer.py  incremental_xgb.py  lightning_trainer.py  model_factory.py  model_per_point.py  sample_weighting.py
src/commons/: helpers.py  (+7 more)
tests/: test_s3_load.py
(+99 files in other folders)
