[project]
name = "med-wav"
version = "0.1.0"
description = "Med-waves reanalysis"
authors = [
    {name = "giannisginis",email = "giannisginis53@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
packages = [{include = "src"}]

[tool.poetry.dependencies]
numpy = "^1.24.0"
netcdf4 = {version = ">=1.7.2,<2.0.0"}
scipy = {version = ">=1.16.0,<2.0.0"}
scikit-learn = "^1.7.0"
xarray = {version = ">=2025.6.1,<2026.0.0"}
tqdm = {version = ">=4.67.1,<5.0.0"}
dask = {version = ">=2025.5.1,<2026.0.0"}
cartopy = "^0.24.1"
seaborn = "^0.13.2"
comet-ml = "^3.49.11"
polars-lts-cpu = "^1.31.0"
pyarrow = "^20.0.0"
streamlit = "^1.46.1"
statsmodels = "^0.14.4"
contourpy = "1.3.2"
cairosvg = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pre-commit = "^4.2.0"

